* skript.latex:   + die Definition von \cA, \cB, \lneg und \implies in die Präampel     geschoben. Dort sind sie global verfügbar und ich jedenfalls suche     zuerst nach Definitionen in der Präampel.
  + Abkürzungen wie z. B. und d. h. werden mit einem \, gesetzt. Das
    steht so in typokurz. Alle entsprechenden Stellen korrigiert.

  + die Satznamen richtig mit dem optionalen Argument erzeugt

  + alle Bezüge (\ref) durch \autoref ersetzt. Das ist einfach bequemer,
    sollte sich doch nochmal was ändern und der Link im PDF ist größer.

  + das \em durch ein \textit ersetzt; \emph ist bei uns etwas mehr als
    \textit

  + die $$ ... $$ durch ein gather ersetzt

  + Das Paket pictex durch pictexwd ersetzt. Damit hat das Skript vorhin
    in der Uni ordnungsgemäß übersetzt. DE-Tex-FAQ 6.4.5
    http://www.dante.de/faq/de-tex-faq/html/makros2.html#73


git-svn-id: https://svn.lug-jena.de/uni-skripte@324 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -54,7 +54,7 @@
 \usepackage{mparhack}    % Korrigiert einige Probleme mit \marginpar; die
                          % Option [debug] ist hilfreich bei Problemen
 
-\usepackage{pictex}
+\usepackage{pictexwd}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -182,6 +182,11 @@
 % Der wagerechte Strich soll etwas länger sein
 \renewcommand*{\vdash}{\mathrel{|}\mathop{\mkern-9mu-\mkern-7mu-}\limits}
 
+\newcommand*{\cA}{\mathcal{A}}    % Schreibschrift A
+\newcommand*{\cB}{\mathcal{B}}    % Schreibschrift B
+
+\newcommand*{\lneg}{\neg}
+\newcommand*{\limplies}{\rightarrow}
 
 % Manchmal möchte man Begriffe erklären oder etwas aufzählen, das aber
 % nicht fett gedruckt werden soll. Dazu diese Umdefinition einer
@@ -317,7 +322,7 @@ Logik ist es aber auch möglich, dass beide Teilaussagen wahr sind.
 
 \emph{Implikation} zweier Aussagen:
 \begin{itemize}
- \item \emph[rand=wenn\ldots dann,index=wenn\ldots dann]{Wenn
+ \item \emph[indexrand=wenn \ldots dann]{Wenn
   \textnormal{die Straße nass ist,} dann} liegt Hamburg in
   Thüringen.
 \end{itemize}
@@ -1253,7 +1258,7 @@ aussagenlogische Tautologie. -- \autoref{satz:1})
     Wir f\"uhren eine Induktion \"uber den Formelaufbau.
 
     \begin{mdescription}
-     \item[IA:] $\phi$ ist eine Variable, d.h.~$\phi=B$.
+     \item[IA:] $\phi$ ist eine Variable, d.\,h.~$\phi=B$.
       \begin{itemize}
         \item $B\in\mathcal{A}$. Dann gilt $\mathcal{A}\vdash_{\mathrm{L}} B$
               (Deduktionstheorem).
@@ -1602,16 +1607,7 @@ Verfahren für die Umformung verwenden.
 \end{bsp}
 
 %\input{ALogik}
-{%% Anfang des Abschnittes ueber Resolution
-
-\newcommand*{\cA}{\mathcal{A}}    % Schreibschrift A
-\newcommand*{\cB}{\mathcal{B}}    % Schreibschrift B
-
-\newcommand{\cw}{w}
-\newcommand{\cf}{f}
-
-\newcommand{\lneg}{\neg}
-\newcommand{\limplies}{\rightarrow}
+%% Anfang des Abschnittes ueber Resolution
 
 Wenn $\cA(\phi)=w$, dann \emph{erf\"ullt} die Belegung $\cA$ die Formel $\phi$.
 Die erf\"ullende Belegung $\cA$ wird auch \emph{Modell} von $\phi$ genannt.
@@ -1619,7 +1615,7 @@ Die erf\"ullende Belegung $\cA$ wird auch \emph{Modell} von $\phi$ genannt.
 Im Zusammenhang mit Resolution stellt man Formeln in Konjunktiver Normalform
 als Mengen dar.
 Jede Klausel wird als Menge ihrer Literale dargestellt, 
-z.B.~die Klausel $(A \vee \lneg B \vee C)$ als Menge $\{A, \lneg B, C\}$.
+z.\,B.~die Klausel $(A \vee \lneg B \vee C)$ als Menge $\{A, \lneg B, C\}$.
 Belegung $\cA$ erf\"ullt Klausel $C$ genau dann, wenn $\cA\cap C\not=\emptyset$.
 Die leere Klausel -- also die leere Menge von Literalen --
 wird als $\Box$ dargestellt.
@@ -1628,7 +1624,7 @@ ist die leere Klausel unerf\"ullbar.
 
 Eine Konjunktion von Klauseln
 wird als Menge von Klauseln dargestellt,
-z.B.~$(A \vee \lneg B \vee C)\wedge(B \vee \lneg C) \wedge \lneg A$
+z.\,B.~$(A \vee \lneg B \vee C)\wedge(B \vee \lneg C) \wedge \lneg A$
 als Menge $\big\{ \{A, \lneg B, C \}, \{B, \lneg C\},\{\lneg A\} \big\}$.
 Die Belegung $\cA$ erf\"ullt die Klauselmenge $S$,
 wenn $\cA\cap C\not=\emptyset$ f\"ur jede Klausel $C\in S$.
@@ -1664,7 +1660,7 @@ und
 Wir betrachten die erf\"ullende Belegung $\cA=\{\lneg b, \lneg c\}$ 
 der obigen Menge $S^{\lneg a}$.
 Jede Klausel in $S$, aus der eine Klausel in $S^{\lneg a}$ wurde
--- also die Klauseln $\{a,\lneg b, c\}$ und $\{\lneg b, c\}$ --
+-- also die Klauseln $\{a,\lneg b, c\}$ und $\{\lneg b, c\}$ --,
 werden von $\cA$ erf\"ullt.
 Alle \"ubrigen Klauseln in $S$ ernthalten das Literal $\lneg a$
 und werden von $\cA\cup\{\lneg a\}$ erf\"ullt.
@@ -1732,7 +1728,7 @@ $\{y, \lneg y\}$ und
 $\{x, \lneg x\}$ gebildet werden (und keine anderen).
 
 
-\begin{lemma}{\bf (Resolutionslemma)}\label{Resolutionslemma}
+\begin{lemma}[Resolutionslemma]\label{Resolutionslemma}
 Sei $R$ Resolvent der Klauseln $C_1$ und $C_2$.
 Wenn $\cA$ beide Klauseln $C_1$ und $C_2$ erf\"ullt,
 dann erf\"ullt $\cA$ auch den Resolventen $R$.
@@ -1741,7 +1737,7 @@ dann erf\"ullt $\cA$ auch den Resolventen $R$.
 \begin{proof}
 Sei $R$ Resolvent der Klauseln $C_1$ und $C_2$ nach Literal $\ell$, 
 und sei $\cA$ erf\"ullt $C_1$ und $C_2$
-(d.h. $\cA\cap C_1\not=\emptyset$ und $\cA\cap C_2\not=\emptyset$).
+(d.\,h. $\cA\cap C_1\not=\emptyset$ und $\cA\cap C_2\not=\emptyset$).
 Ist $\ell\not\in\cA$, dann ist $\cA\cap(C_1-\{\ell\})\not=\emptyset$;
 ist $\overline{\ell}\not\in\cA$, 
 dann ist $\cA\cap(C_2-\{\overline{\ell}\})\not=\emptyset$.
@@ -1841,7 +1837,7 @@ Nachfolger. ($C_1$ und $C_2$ hei\3en auch Eltern-Klauseln von $C$.)
 %\end{enumerate}
 
 Die beiden Herleitungen aus obigem Beispiel
-lassen sich wie in Abbildung~\ref{Res-Baeume} veranschaulichen.
+lassen sich wie in \autoref{Res-Baeume} veranschaulichen.
 
 \begin{figure}[t]
 \beginpicture
@@ -1877,7 +1873,7 @@ Wir wollen nun die Korrektheit und die Vollst\"andigkeit
 der Resolutionsmethode nachweisen.
 
 \index{Resolutionsmethode!Korrekheit der}
-\begin{satz}{\bf (Korrektheit der Resolutionsmethode)}
+\begin{satz}[Korrektheit der Resolutionsmethode]
 \label{satz-korrektheit-resolution-vor}
 Ist eine Klauselmenge $S$ erf\"ullbar, 
    dann ist $S$ nicht mittels Resolution widerlegbar.
@@ -1900,8 +1896,8 @@ Folglich gibt es keine Herleitung von $\Box$ aus $S$,
 das hei\3t $S$ ist nicht widerlegbar.
 \end{proof}
 
-Satz~\ref{satz-korrektheit-resolution-vor} zeigt tats\"achlich die
-{\em Korrektheit der Resolutionsmethode\/}:
+\autoref{satz-korrektheit-resolution-vor} zeigt tats\"achlich die
+\textit{Korrektheit der Resolutionsmethode}:
 Ist eine Klauselmenge $S$ mittels Resolution widerlegbar, 
 dann ist $S$ unerf\"ullbar.
 
@@ -1915,16 +1911,19 @@ aus $S^{\overline{\ell}}$ eine Herleitung der
 leeren Klausel aus $S$ konstruieren kann.
 
 Sei die Klauselmenge $S$ beispielsweise gegeben als
-$$S=\big\{\{u,\neg v, w,x\},\{u,v,w,x\},
-\{u,\neg w\},\{u,w,\neg x\},\{\lneg u,x\},\{\lneg u,\lneg x\}\big\}\ \ \ .$$
+\begin{gather*}
+  S=\big\{ \{u,\neg v, w,x\},\{u,v,w,x\},
+     \{u,\neg w\},\{u,w,\neg x\},\{\lneg u,x\},\{\lneg u,\lneg x\}
+    \big\}. % Der Punkt vom Satzende
+\end{gather*}
 Um die Unerf\"ullbarkeit von $S$ 
-gem\"a\3 Lemma~\ref{ALogik-Sell}
+gem\"a\3 \autoref{ALogik-Sell}
 zu beweisen, 
 m\"ussen wir Widerlegungen der beiden Klauselmengen 
 $S^x = \big\{\{u,\lneg w\},\{u,w\},\{\lneg u\}\big\}$ und
 $S^{\lneg x} = \big\{\{u,\neg v, w\}, \{u,v,w\}, \{u,\neg w\}, \{\lneg u\}\big\}$
 angeben.
-Diese Widerlegungen sind in Abbildung~\ref{zweiwiderlegungen} dargestellt.
+Diese Widerlegungen sind in \autoref{zweiwiderlegungen} dargestellt.
 %
 \begin{figure}
 \beginpicture
@@ -1957,13 +1956,13 @@ Diese Widerlegungen sind in Abbildung~\ref{zweiwiderlegungen} dargestellt.
 \caption{Widerlegungen von $S^x$ und $S^{\neg x}$}\label{zweiwiderlegungen}
 \end{figure}
 %
-Die "`Bl\"atter"' der beiden B\"aume in Abbildung~\ref{zweiwiderlegungen}
+Die "`Bl\"atter"' der beiden B\"aume in \autoref{zweiwiderlegungen}
 sind Klauseln aus $S^x$ bzw. Klauseln aus $S^{\lneg x}$.
 Nun f\"ugen wir in alle Bl\"atter, die nicht durch Klauseln in $S$ 
 beschriftet sind,
 das entfernte Literal $x$ bzw. $\lneg x$ wieder ein
 und f\"uhren die Resolutionsschritte wie gehabt durch
-(siehe Abbildung~\ref{auszweimacheins}).
+(siehe \autoref{auszweimacheins}).
 Wir bekommen so aus den beiden Herleitungen von $\Box$
 aus $S^x$ und aus $S^{\neg x}$
 zwei Herleitungen aus $S$: Die eine von $\{x\}$ und
@@ -2041,7 +2040,7 @@ Herleitung von $\Box$ oder $\{\overline{\ell}\}$ aus $S$.
 \end{proof}
 
 \index{Resolutionsmethode!Vollst\"andigkeit der}
-\begin{satz}{\bf (Vollst\"andigkeit der Resolutionsmethode)}
+\begin{satz}[Vollst\"andigkeit der Resolutionsmethode]
 Ist eine Klauselmenge $S$ unerf\"ullbar, 
             dann ist $S$ widerlegbar mittels Resolution.
 \end{satz}
@@ -2063,9 +2062,9 @@ wen $S$ unerf\"ullbar ist, dann gibt es eine Resolutionswiderlegung von $S$.
 {Induktionsschluss:}
 $S$ enthalte $n+1$ Variablen und sei unerf\"ullbar.
 Dann sind auch $S^{\ell}$ und $S^{\overline{\ell}}$
-unerf\"ullbar. (Lemma~\ref{ALogik-Sell}).
+unerf\"ullbar. (\autoref{ALogik-Sell}).
 Nach IV sind $S^{\ell}$ und $S^{\overline{\ell}}$ widerlegbar.
-Nach obigem Lemma~\ref{lemma-vollst-resolution} ist
+Nach obigem \autoref{lemma-vollst-resolution} ist
 (1) $\Box$ aus $S$ herleitbar
 oder (2) $\{\ell\}$ und $\{\overline{\ell}\}$ sind aus $S$ herleitbar.
 Im Fall (1) haben wir bereits die Widerlegbarkeit von $S$ gezeigt.
@@ -2083,7 +2082,7 @@ Aus der Korrektheit und der Vollst\"andigkeit der Resolutionsmethode
 ergibt sich der Resolutionssatz der Aussagenlogik.
 
 \index{Resolutionssatz}
-\begin{satz}{\bf (Resolutionssatz)}\label{resolutionssatz}
+\begin{satz}[Resolutionssatz]\label{resolutionssatz}
 Klauselmenge $S$ ist unerf\"ullbar genau dann, 
 wenn $S$ mittels Resolution widerlegbar ist.
 \end{satz}
@@ -2118,7 +2117,7 @@ nachzuweisen,
 (x\lor \lneg z) \wedge (x \lor y \lor z)
 \wedge (\lneg x \lor \lneg y \lor \lneg z)\ \ .
 \]
-Abbildung~\ref{last-resolution} veranschaulicht 
+\autoref{last-resolution} veranschaulicht 
 die Resolutionswiderlegung von $\lneg \alpha$.
 Also ist $\alpha$ eine Tautologie.
 %
@@ -2156,7 +2155,7 @@ Also ist $\alpha$ eine Tautologie.
 \caption{Widerlegung von $\lneg\alpha$ mittels Resolution}\label{last-resolution}
 \end{figure}
 
-} %% Ende des Abschnittes ueber Resolution
+%% Ende des Abschnittes ueber Resolution
 
 
 \clearpage
