Variablennamen auf Grossbuchstaben geaendert, Grafiken zur Resolution "verbessert", Begriff "l-quer" definiert (Negation eines Literals)
git-svn-id: https://svn.lug-jena.de/uni-skripte@327 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/resolution.7
+++ b/mundhenk-logik/resolution.7
@@ -1,9 +1,9 @@
 %!PS
-%%BoundingBox: -18 -153 431 15 
+%%BoundingBox: -19 -153 433 16 
 %%Creator: MetaPost
-%%CreationDate: 2006.05.15:1737
+%%CreationDate: 2006.05.16:1316
 %%Pages: 1
-%*Font: cmmi10 9.96265 9.96265 3b:800000000000003c
+%*Font: cmmi10 9.96265 9.96265 3b:83c
 %*Font: cmsy10 9.96265 9.96265 3a:80000000000c
 %*Font: lasy10 9.96265 9.96265 32:8
 %%EndProlog
@@ -18,98 +18,106 @@ newpath 35.43301 -51.02353 moveto
 106.29903 -68.03137 lineto stroke
 newpath 141.73203 0 moveto
 106.29903 -68.03137 lineto stroke
--17.06801 6.01328 moveto
+-18.8069 6.01328 moveto
 (f) cmsy10 9.96265 fshow
--12.08672 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
--1.9557 6.01328 moveto
+-13.8256 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+-5.769 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+-1.3412 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-4.6861 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-12.0866 6.01328 moveto
+5.3006 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+13.8256 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-45.34985 6.35922 moveto
+42.72191 5.10002 moveto
 (f) cmsy10 9.96265 fshow
-50.33115 6.35922 moveto
-(u;) cmmi10 9.96265 fshow
-60.46216 6.35922 moveto
-(w) cmmi10 9.96265 fshow
-67.86266 6.35922 moveto
+47.7032 5.10002 moveto
+(B) cmmi10 9.96265 fshow
+55.75981 5.10002 moveto
+(;) cmmi10 9.96265 fshow
+60.1876 5.10002 moveto
+(D) cmmi10 9.96265 fshow
+68.71262 5.10002 moveto
 (;) cmmi10 9.96265 fshow
  0 0.3985 dtransform truncate idtransform setlinewidth pop 0 setlinecap
-newpath 72.29045 13.83672 moveto
-91.40076 13.83672 lineto stroke
+newpath 73.14041 15.09583 moveto
+94.02881 15.09583 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 72.48975 3.37042 moveto
-72.48975 13.63742 lineto stroke
-75.67775 6.35922 moveto
+newpath 73.3397 2.11122 moveto
+73.3397 14.89662 lineto stroke
+76.52771 5.10002 moveto
 (:) cmsy10 9.96265 fshow
-82.31955 6.35922 moveto
-(x) cmmi10 9.96265 fshow
-newpath 91.20155 3.37042 moveto
-91.20155 13.63742 lineto stroke
+83.16951 5.10002 moveto
+(A) cmmi10 9.96265 fshow
+newpath 93.82951 2.11122 moveto
+93.82951 14.89662 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 72.29045 3.17122 moveto
-91.40076 3.17122 lineto stroke
-91.40076 6.35922 moveto
+newpath 73.14041 1.91202 moveto
+94.02881 1.91202 lineto stroke
+94.02881 5.10002 moveto
 (g) cmsy10 9.96265 fshow
-118.80917 6.35922 moveto
+116.74342 5.10002 moveto
 (f:) cmsy10 9.96265 fshow
-130.43227 6.35922 moveto
-(u;) cmmi10 9.96265 fshow
-newpath 140.56328 13.83672 moveto
-159.67357 13.83672 lineto stroke
+128.36652 5.10002 moveto
+(B) cmmi10 9.96265 fshow
+136.42313 5.10002 moveto
+(;) cmmi10 9.96265 fshow
+newpath 140.85092 15.09583 moveto
+161.73932 15.09583 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 140.76257 3.37042 moveto
-140.76257 13.63742 lineto stroke
-143.95058 6.35922 moveto
+newpath 141.05022 2.11122 moveto
+141.05022 14.89662 lineto stroke
+144.23822 5.10002 moveto
 (:) cmsy10 9.96265 fshow
-150.59238 6.35922 moveto
-(x) cmmi10 9.96265 fshow
-newpath 159.47427 3.37042 moveto
-159.47427 13.63742 lineto stroke
+150.88002 5.10002 moveto
+(A) cmmi10 9.96265 fshow
+newpath 161.54002 2.11122 moveto
+161.54002 14.89662 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 140.56328 3.17122 moveto
-159.67357 3.17122 lineto stroke
-159.67357 6.35922 moveto
+newpath 140.85092 1.91202 moveto
+161.73932 1.91202 lineto stroke
+161.73932 5.10002 moveto
 (g) cmsy10 9.96265 fshow
-15.83101 -44.6643 moveto
+13.7653 -45.92351 moveto
 (f) cmsy10 9.96265 fshow
-20.8123 -44.6643 moveto
-(u;) cmmi10 9.96265 fshow
-newpath 30.94331 -37.18681 moveto
-50.0536 -37.18681 lineto stroke
+18.7466 -45.92351 moveto
+(B) cmmi10 9.96265 fshow
+26.8032 -45.92351 moveto
+(;) cmmi10 9.96265 fshow
+newpath 31.231 -35.9277 moveto
+52.1194 -35.9277 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 31.14261 -47.6531 moveto
-31.14261 -37.38611 lineto stroke
-34.33061 -44.6643 moveto
+newpath 31.4303 -48.91231 moveto
+31.4303 -36.1269 lineto stroke
+34.6183 -45.92351 moveto
 (:) cmsy10 9.96265 fshow
-40.97241 -44.6643 moveto
-(x) cmmi10 9.96265 fshow
-newpath 49.85442 -47.6531 moveto
-49.85442 -37.38611 lineto stroke
+41.2601 -45.92351 moveto
+(A) cmmi10 9.96265 fshow
+newpath 51.9201 -48.91231 moveto
+51.9201 -36.1269 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 30.94331 -47.85231 moveto
-50.0536 -47.85231 lineto stroke
-50.0536 -44.6643 moveto
+newpath 31.231 -49.11151 moveto
+52.1194 -49.11151 lineto stroke
+52.1194 -45.92351 moveto
 (g) cmsy10 9.96265 fshow
-91.76253 -78.68 moveto
+90.87352 -79.9392 moveto
 (f) cmsy10 9.96265 fshow
-newpath 96.74382 -71.2025 moveto
-115.85413 -71.2025 lineto stroke
+newpath 95.85481 -69.94339 moveto
+116.74323 -69.94339 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 96.94313 -81.6688 moveto
-96.94313 -71.4018 lineto stroke
-100.13113 -78.68 moveto
+newpath 96.05412 -82.928 moveto
+96.05412 -70.1426 lineto stroke
+99.24213 -79.9392 moveto
 (:) cmsy10 9.96265 fshow
-106.77293 -78.68 moveto
-(x) cmmi10 9.96265 fshow
-newpath 115.65492 -81.6688 moveto
-115.65492 -71.4018 lineto stroke
+105.88393 -79.9392 moveto
+(A) cmmi10 9.96265 fshow
+newpath 116.54391 -82.928 moveto
+116.54391 -70.1426 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 96.74382 -81.868 moveto
-115.85413 -81.868 lineto stroke
-115.85413 -78.68 moveto
+newpath 95.85481 -83.1272 moveto
+116.74323 -83.1272 lineto stroke
+116.74323 -79.9392 moveto
 (g) cmsy10 9.96265 fshow
  0 0.5 dtransform truncate idtransform setlinewidth pop 1 setlinecap
 newpath 226.77124 0 moveto
@@ -124,144 +132,156 @@ newpath 411.02287 0 moveto
 318.89706 -102.04706 lineto stroke
 newpath 297.63725 -85.03922 moveto
 318.89706 -102.04706 lineto stroke
-196.44794 6.35922 moveto
+192.77339 5.10002 moveto
 (f) cmsy10 9.96265 fshow
-201.42923 6.35922 moveto
-(u;) cmmi10 9.96265 fshow
-211.56024 6.35922 moveto
-(:) cmsy10 9.96265 fshow
-218.20204 6.35922 moveto
-(v) cmmi10 9.96265 fshow
-223.38864 6.35922 moveto
+197.75468 5.10002 moveto
+(B) cmmi10 9.96265 fshow
+205.8113 5.10002 moveto
 (;) cmmi10 9.96265 fshow
-227.81644 6.35922 moveto
-(w) cmmi10 9.96265 fshow
-235.21693 6.35922 moveto
+210.23909 5.10002 moveto
+(:) cmsy10 9.96265 fshow
+216.88089 5.10002 moveto
+(C) cmmi10 9.96265 fshow
+224.1606 5.10002 moveto
+(;) cmmi10 9.96265 fshow
+228.5884 5.10002 moveto
+(D) cmmi10 9.96265 fshow
+237.1133 5.10002 moveto
 (;) cmmi10 9.96265 fshow
  0 0.3985 dtransform truncate idtransform setlinewidth pop 0 setlinecap
-newpath 239.64473 13.83672 moveto
-252.11324 13.83672 lineto stroke
+newpath 241.54109 15.09583 moveto
+255.78769 15.09583 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 239.84393 3.37042 moveto
-239.84393 13.63742 lineto stroke
-243.03204 6.35922 moveto
-(x) cmmi10 9.96265 fshow
-newpath 251.91394 3.37042 moveto
-251.91394 13.63742 lineto stroke
+newpath 241.74039 2.11122 moveto
+241.74039 14.89662 lineto stroke
+244.92839 5.10002 moveto
+(A) cmmi10 9.96265 fshow
+newpath 255.58849 2.11122 moveto
+255.58849 14.89662 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 239.64473 3.17122 moveto
-252.11324 3.17122 lineto stroke
-252.11324 6.35922 moveto
+newpath 241.54109 1.91202 moveto
+255.78769 1.91202 lineto stroke
+255.78769 5.10002 moveto
 (g) cmsy10 9.96265 fshow
-270.63484 6.35922 moveto
+266.9603 5.10002 moveto
 (f) cmsy10 9.96265 fshow
-275.61613 6.35922 moveto
-(u;) cmmi10 9.96265 fshow
-285.74715 6.35922 moveto
-(v) cmmi10 9.96265 fshow
-290.93375 6.35922 moveto
+271.94159 5.10002 moveto
+(B) cmmi10 9.96265 fshow
+279.9982 5.10002 moveto
 (;) cmmi10 9.96265 fshow
-295.36154 6.35922 moveto
-(w) cmmi10 9.96265 fshow
-302.76204 6.35922 moveto
+284.426 5.10002 moveto
+(C) cmmi10 9.96265 fshow
+291.7057 5.10002 moveto
 (;) cmmi10 9.96265 fshow
-newpath 307.18983 13.83672 moveto
-319.65834 13.83672 lineto stroke
+296.1335 5.10002 moveto
+(D) cmmi10 9.96265 fshow
+304.6585 5.10002 moveto
+(;) cmmi10 9.96265 fshow
+newpath 309.0863 15.09583 moveto
+323.3328 15.09583 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 307.38914 3.37042 moveto
-307.38914 13.63742 lineto stroke
-310.57715 6.35922 moveto
-(x) cmmi10 9.96265 fshow
-newpath 319.45914 3.37042 moveto
-319.45914 13.63742 lineto stroke
+newpath 309.28549 2.11122 moveto
+309.28549 14.89662 lineto stroke
+312.4736 5.10002 moveto
+(A) cmmi10 9.96265 fshow
+newpath 323.13359 2.11122 moveto
+323.13359 14.89662 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 307.18983 3.17122 moveto
-319.65834 3.17122 lineto stroke
-319.65834 6.35922 moveto
+newpath 309.0863 1.91202 moveto
+323.3328 1.91202 lineto stroke
+323.3328 5.10002 moveto
 (g) cmsy10 9.96265 fshow
-337.26205 6.01328 moveto
+335.52316 6.01328 moveto
 (f) cmsy10 9.96265 fshow
-342.24335 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
-352.37436 6.01328 moveto
+340.50446 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+348.56107 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+352.98886 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-359.01616 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-366.41666 6.01328 moveto
+359.63066 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+368.15567 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-391.42087 6.35922 moveto
+389.35516 5.10002 moveto
 (f:) cmsy10 9.96265 fshow
-403.04396 6.35922 moveto
-(u;) cmmi10 9.96265 fshow
-newpath 413.17497 13.83672 moveto
-425.64346 13.83672 lineto stroke
- 0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 413.37427 3.37042 moveto
-413.37427 13.63742 lineto stroke
-416.56227 6.35922 moveto
-(x) cmmi10 9.96265 fshow
-newpath 425.44427 3.37042 moveto
-425.44427 13.63742 lineto stroke
- 0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 413.17497 3.17122 moveto
-425.64346 3.17122 lineto stroke
-425.64346 6.35922 moveto
-(g) cmsy10 9.96265 fshow
-240.009 -44.6643 moveto
-(f) cmsy10 9.96265 fshow
-244.9903 -44.6643 moveto
-(u;) cmmi10 9.96265 fshow
-255.1213 -44.6643 moveto
-(w) cmmi10 9.96265 fshow
-262.5218 -44.6643 moveto
+400.97826 5.10002 moveto
+(B) cmmi10 9.96265 fshow
+409.03487 5.10002 moveto
 (;) cmmi10 9.96265 fshow
-newpath 266.9496 -37.18681 moveto
-279.4181 -37.18681 lineto stroke
+newpath 413.46266 15.09583 moveto
+427.70926 15.09583 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 267.1489 -47.6531 moveto
-267.1489 -37.38611 lineto stroke
-270.3369 -44.6643 moveto
-(x) cmmi10 9.96265 fshow
-newpath 279.2189 -47.6531 moveto
-279.2189 -37.38611 lineto stroke
+newpath 413.66196 2.11122 moveto
+413.66196 14.89662 lineto stroke
+416.84996 5.10002 moveto
+(A) cmmi10 9.96265 fshow
+newpath 427.50996 2.11122 moveto
+427.50996 14.89662 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 266.9496 -47.85231 moveto
-279.4181 -47.85231 lineto stroke
-279.4181 -44.6643 moveto
+newpath 413.46266 1.91202 moveto
+427.70926 1.91202 lineto stroke
+427.70926 5.10002 moveto
 (g) cmsy10 9.96265 fshow
-281.35616 -78.68 moveto
+237.38106 -45.92351 moveto
 (f) cmsy10 9.96265 fshow
-286.33745 -78.68 moveto
-(u;) cmmi10 9.96265 fshow
-newpath 296.46846 -71.2025 moveto
-308.93695 -71.2025 lineto stroke
+242.36235 -45.92351 moveto
+(B) cmmi10 9.96265 fshow
+250.41896 -45.92351 moveto
+(;) cmmi10 9.96265 fshow
+254.84676 -45.92351 moveto
+(D) cmmi10 9.96265 fshow
+263.37177 -45.92351 moveto
+(;) cmmi10 9.96265 fshow
+newpath 267.79956 -35.9277 moveto
+282.04616 -35.9277 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 296.66776 -81.6688 moveto
-296.66776 -71.4018 lineto stroke
-299.85576 -78.68 moveto
-(x) cmmi10 9.96265 fshow
-newpath 308.73776 -81.6688 moveto
-308.73776 -71.4018 lineto stroke
+newpath 267.99886 -48.91231 moveto
+267.99886 -36.1269 lineto stroke
+271.18686 -45.92351 moveto
+(A) cmmi10 9.96265 fshow
+newpath 281.84695 -48.91231 moveto
+281.84695 -36.1269 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 296.46846 -81.868 moveto
-308.93695 -81.868 lineto stroke
-308.93695 -78.68 moveto
+newpath 267.79956 -49.11151 moveto
+282.04616 -49.11151 lineto stroke
+282.04616 -45.92351 moveto
 (g) cmsy10 9.96265 fshow
-307.68146 -112.69568 moveto
+279.2904 -79.9392 moveto
 (f) cmsy10 9.96265 fshow
-newpath 312.66275 -105.21819 moveto
-325.13126 -105.21819 lineto stroke
+284.2717 -79.9392 moveto
+(B) cmmi10 9.96265 fshow
+292.32831 -79.9392 moveto
+(;) cmmi10 9.96265 fshow
+newpath 296.7561 -69.94339 moveto
+311.0027 -69.94339 lineto stroke
  0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
-newpath 312.86206 -115.68448 moveto
-312.86206 -105.41748 lineto stroke
-316.05006 -112.69568 moveto
-(x) cmmi10 9.96265 fshow
-newpath 324.93205 -115.68448 moveto
-324.93205 -105.41748 lineto stroke
+newpath 296.9554 -82.928 moveto
+296.9554 -70.1426 lineto stroke
+300.1434 -79.9392 moveto
+(A) cmmi10 9.96265 fshow
+newpath 310.80351 -82.928 moveto
+310.80351 -70.1426 lineto stroke
  0 0.3985 dtransform truncate idtransform setlinewidth pop
-newpath 312.66275 -115.88368 moveto
-325.13126 -115.88368 lineto stroke
-325.13126 -112.69568 moveto
+newpath 296.7561 -83.1272 moveto
+311.0027 -83.1272 lineto stroke
+311.0027 -79.9392 moveto
+(g) cmsy10 9.96265 fshow
+306.79247 -113.95488 moveto
+(f) cmsy10 9.96265 fshow
+newpath 311.77376 -103.95908 moveto
+326.02037 -103.95908 lineto stroke
+ 0.3985 0 dtransform exch truncate exch idtransform pop setlinewidth
+newpath 311.97307 -116.94368 moveto
+311.97307 -104.15828 lineto stroke
+315.16107 -113.95488 moveto
+(A) cmmi10 9.96265 fshow
+newpath 325.82117 -116.94368 moveto
+325.82117 -104.15828 lineto stroke
+ 0 0.3985 dtransform truncate idtransform setlinewidth pop
+newpath 311.77376 -117.14288 moveto
+326.02037 -117.14288 lineto stroke
+326.02037 -113.95488 moveto
 (g) cmsy10 9.96265 fshow
  0 0.5 dtransform truncate idtransform setlinewidth pop 1 setlinecap
 newpath 106.29903 -85.03922 moveto
