--- a/mundhenk-logik/resolution.1
+++ b/mundhenk-logik/resolution.1
@@ -1,27 +1,27 @@
 %!PS
-%%BoundingBox: -63 -42 63 12 
+%%BoundingBox: -63 -12 63 42 
 %%Creator: MetaPost
-%%CreationDate: 2006.05.15:1737
+%%CreationDate: 2006.05.16:1316
 %%Pages: 1
-%*Font: cmmi10 9.96265 9.96265 43:8
+%*Font: cmmi10 9.96265 9.96265 43:8001
 %*Font: cmr7 6.97385 6.97385 31:c
 %%EndProlog
 %%Page: 1 1
  0 0.5 dtransform truncate idtransform setlinewidth pop [] 0 setdash
  1 setlinecap 1 setlinejoin 10 setmiterlimit
 newpath 0 0 moveto
--56.69281 -28.3464 lineto stroke
+-56.69281 28.3464 lineto stroke
 newpath 0 0 moveto
-56.69281 -28.3464 lineto stroke
--3.91655 5.10002 moveto
+56.69281 28.3464 lineto stroke
+-3.82076 -11.90782 moveto
+(R) cmmi10 9.96265 fshow
+-62.48776 34.19363 moveto
 (C) cmmi10 9.96265 fshow
--62.48776 -39.50702 moveto
-(C) cmmi10 9.96265 fshow
--55.36726 -41.00142 moveto
+-55.36726 32.69923 moveto
 (1) cmr7 6.97385 fshow
-50.89786 -39.50702 moveto
+50.89786 34.19363 moveto
 (C) cmmi10 9.96265 fshow
-58.01836 -41.00142 moveto
+58.01836 32.69923 moveto
 (2) cmr7 6.97385 fshow
 showpage
 %%EOF
