--- a/mundhenk-logik/resolution.3
+++ b/mundhenk-logik/resolution.3
@@ -1,9 +1,9 @@
 %!PS
-%%BoundingBox: -13 -79 190 14 
+%%BoundingBox: -15 -79 192 14 
 %%Creator: MetaPost
-%%CreationDate: 2006.05.15:1737
+%%CreationDate: 2006.05.16:1316
 %%Pages: 1
-%*Font: cmmi10 9.96265 9.96265 3b:8000000000000006
+%*Font: cmmi10 9.96265 9.96265 3b:83
 %*Font: cmsy10 9.96265 9.96265 3a:80000000000c
 %*Font: lasy10 9.96265 9.96265 32:8
 %%EndProlog
@@ -22,53 +22,53 @@ newpath 28.3464 -51.02353 moveto
 85.03922 -68.03137 lineto stroke
 newpath 141.73203 -51.02353 moveto
 85.03922 -68.03137 lineto stroke
--12.66315 6.01328 moveto
+-14.95955 6.01328 moveto
 (f) cmsy10 9.96265 fshow
--7.68185 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-2.43996 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-7.68185 6.01328 moveto
+-9.97826 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+1.92155 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+9.97815 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-40.70876 6.01328 moveto
+38.4124 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
-52.33185 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-62.45355 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-67.69556 6.01328 moveto
+50.03549 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+61.9353 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+69.9919 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-97.40157 6.01328 moveto
+95.10521 6.01328 moveto
 (f) cmsy10 9.96265 fshow
-102.38286 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-112.50467 6.01328 moveto
+100.0865 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+111.98631 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-119.14636 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-124.38837 6.01328 moveto
+118.62811 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+126.68471 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-150.77348 6.01328 moveto
+148.47713 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
-162.39658 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-172.51828 6.01328 moveto
+160.10022 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+172.00003 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-179.16008 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-184.40208 6.01328 moveto
+178.64183 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+186.69843 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-20.7441 -45.01025 moveto
+19.33675 -45.01025 moveto
 (f) cmsy10 9.96265 fshow
-25.72539 -45.01025 moveto
-(y) cmmi10 9.96265 fshow
-30.96739 -45.01025 moveto
+24.31804 -45.01025 moveto
+(B) cmmi10 9.96265 fshow
+32.37465 -45.01025 moveto
 (g) cmsy10 9.96265 fshow
-130.80882 -45.01025 moveto
+129.40152 -45.01025 moveto
 (f:) cmsy10 9.96265 fshow
-142.43192 -45.01025 moveto
-(y) cmmi10 9.96265 fshow
-147.67392 -45.01025 moveto
+141.02461 -45.01025 moveto
+(B) cmmi10 9.96265 fshow
+149.08122 -45.01025 moveto
 (g) cmsy10 9.96265 fshow
 81.31706 -78.74919 moveto
 (2) lasy10 9.96265 fshow
