--- a/mundhenk-logik/resolution.4
+++ b/mundhenk-logik/resolution.4
@@ -1,9 +1,9 @@
 %!PS
-%%BoundingBox: -18 -79 125 14 
+%%BoundingBox: -19 -79 126 14 
 %%Creator: MetaPost
-%%CreationDate: 2006.05.15:1737
+%%CreationDate: 2006.05.16:1316
 %%Pages: 1
-%*Font: cmmi10 9.96265 9.96265 3b:8000000000000028
+%*Font: cmmi10 9.96265 9.96265 3b:814
 %*Font: cmsy10 9.96265 9.96265 3a:80000000000c
 %*Font: lasy10 9.96265 9.96265 32:8
 %%EndProlog
@@ -18,35 +18,39 @@ newpath 28.3464 -51.02353 moveto
 85.03922 -68.03137 lineto stroke
 newpath 113.38562 0 moveto
 85.03922 -68.03137 lineto stroke
--17.06801 6.01328 moveto
+-18.8069 6.01328 moveto
 (f) cmsy10 9.96265 fshow
--12.08672 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
--1.9557 6.01328 moveto
+-13.8256 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+-5.769 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+-1.3412 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-4.6861 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-12.0866 6.01328 moveto
+5.3006 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+13.8256 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-42.94571 6.01328 moveto
+41.20676 6.01328 moveto
 (f) cmsy10 9.96265 fshow
-47.927 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
-58.05801 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-65.45851 6.01328 moveto
+46.18805 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+54.24466 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+58.67245 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+67.19746 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-102.23181 6.01328 moveto
+101.05511 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
-113.8549 6.01328 moveto
-(u) cmmi10 9.96265 fshow
-119.5581 6.01328 moveto
+112.6782 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+120.73482 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-20.51346 -45.01025 moveto
+19.33675 -45.01025 moveto
 (f) cmsy10 9.96265 fshow
-25.49475 -45.01025 moveto
-(u) cmmi10 9.96265 fshow
-31.19795 -45.01025 moveto
+24.31804 -45.01025 moveto
+(B) cmmi10 9.96265 fshow
+32.37465 -45.01025 moveto
 (g) cmsy10 9.96265 fshow
 81.31706 -78.74919 moveto
 (2) lasy10 9.96265 fshow
