--- a/mundhenk-logik/resolution.5
+++ b/mundhenk-logik/resolution.5
@@ -1,9 +1,9 @@
 %!PS
-%%BoundingBox: -22 -113 182 14 
+%%BoundingBox: -25 -113 183 14 
 %%Creator: MetaPost
-%%CreationDate: 2006.05.15:1737
+%%CreationDate: 2006.05.16:1316
 %%Pages: 1
-%*Font: cmmi10 9.96265 9.96265 3b:8000000000000038
+%*Font: cmmi10 9.96265 9.96265 3b:81c
 %*Font: cmsy10 9.96265 9.96265 3a:80000000000c
 %*Font: lasy10 9.96265 9.96265 32:8
 %%EndProlog
@@ -22,61 +22,69 @@ newpath 170.07843 0 moveto
 85.03922 -102.04706 lineto stroke
 newpath 56.69281 -85.03922 moveto
 85.03922 -102.04706 lineto stroke
--21.87515 6.01328 moveto
+-24.66066 6.01328 moveto
 (f) cmsy10 9.96265 fshow
--16.89386 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
--6.76285 6.01328 moveto
-(:) cmsy10 9.96265 fshow
--0.12105 6.01328 moveto
-(v) cmmi10 9.96265 fshow
-5.06555 6.01328 moveto
+-19.67937 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+-11.62276 6.01328 moveto
 (;) cmmi10 9.96265 fshow
-9.49335 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-16.89384 6.01328 moveto
-(g) cmsy10 9.96265 fshow
-38.13855 6.01328 moveto
-(f) cmsy10 9.96265 fshow
-43.11984 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
-53.25085 6.01328 moveto
-(v) cmmi10 9.96265 fshow
-58.43745 6.01328 moveto
-(;) cmmi10 9.96265 fshow
-62.86525 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-70.26575 6.01328 moveto
-(g) cmsy10 9.96265 fshow
-96.31761 6.01328 moveto
-(f) cmsy10 9.96265 fshow
-101.2989 6.01328 moveto
-(u;) cmmi10 9.96265 fshow
-111.42992 6.01328 moveto
+-7.19496 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-118.07172 6.01328 moveto
-(w) cmmi10 9.96265 fshow
-125.47221 6.01328 moveto
+-0.55316 6.01328 moveto
+(C) cmmi10 9.96265 fshow
+6.72655 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+11.15434 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+19.67924 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-158.92462 6.01328 moveto
+35.35306 6.01328 moveto
+(f) cmsy10 9.96265 fshow
+40.33435 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+48.39096 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+52.81876 6.01328 moveto
+(C) cmmi10 9.96265 fshow
+60.09846 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+64.52626 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+73.05125 6.01328 moveto
+(g) cmsy10 9.96265 fshow
+94.57872 6.01328 moveto
+(f) cmsy10 9.96265 fshow
+99.56001 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+107.61662 6.01328 moveto
+(;) cmmi10 9.96265 fshow
+112.04442 6.01328 moveto
+(:) cmsy10 9.96265 fshow
+118.68622 6.01328 moveto
+(D) cmmi10 9.96265 fshow
+127.21123 6.01328 moveto
+(g) cmsy10 9.96265 fshow
+157.74792 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
-170.54771 6.01328 moveto
-(u) cmmi10 9.96265 fshow
-176.25092 6.01328 moveto
+169.37102 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+177.42763 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-14.5993 -45.01025 moveto
+12.86035 -45.01025 moveto
 (f) cmsy10 9.96265 fshow
-19.5806 -45.01025 moveto
-(u;) cmmi10 9.96265 fshow
-29.71161 -45.01025 moveto
-(w) cmmi10 9.96265 fshow
-37.1121 -45.01025 moveto
+17.84164 -45.01025 moveto
+(B) cmmi10 9.96265 fshow
+25.89825 -45.01025 moveto
+(;) cmmi10 9.96265 fshow
+30.32605 -45.01025 moveto
+(D) cmmi10 9.96265 fshow
+38.85106 -45.01025 moveto
 (g) cmsy10 9.96265 fshow
-48.85986 -79.02594 moveto
+47.68315 -79.02594 moveto
 (f) cmsy10 9.96265 fshow
-53.84116 -79.02594 moveto
-(u) cmmi10 9.96265 fshow
-59.54436 -79.02594 moveto
+52.66444 -79.02594 moveto
+(B) cmmi10 9.96265 fshow
+60.72105 -79.02594 moveto
 (g) cmsy10 9.96265 fshow
 81.31706 -112.76488 moveto
 (2) lasy10 9.96265 fshow
