--- a/mundhenk-logik/resolution.8
+++ b/mundhenk-logik/resolution.8
@@ -1,166 +1,158 @@
 %!PS
-%%BoundingBox: -16 -215 340 14 
+%%BoundingBox: 38 -215 343 14 
 %%Creator: MetaPost
-%%CreationDate: 2006.05.15:1737
+%%CreationDate: 2006.05.16:1316
 %%Pages: 1
-%*Font: cmmi10 9.96265 9.96265 3b:8000000000000007
+%*Font: cmmi10 9.96265 9.96265 3b:838
 %*Font: cmsy10 9.96265 9.96265 3a:80000000000c
 %*Font: lasy10 9.96265 9.96265 32:8
 %%EndProlog
 %%Page: 1 1
  0 0.5 dtransform truncate idtransform setlinewidth pop [] 0 setdash
  1 setlinecap 1 setlinejoin 10 setmiterlimit
-newpath 0 0 moveto
-18.89761 -34.01569 lineto stroke
+newpath 255.11765 0 moveto
+85.03922 -34.01569 lineto stroke
 newpath 56.69281 0 moveto
-18.89761 -34.01569 lineto stroke
+85.03922 -34.01569 lineto stroke
 newpath 141.73203 0 moveto
-37.79523 -68.03137 lineto stroke
-newpath 18.89761 -51.02353 moveto
-37.79523 -68.03137 lineto stroke
+113.38562 -68.03137 lineto stroke
+newpath 85.03922 -51.02353 moveto
+113.38562 -68.03137 lineto stroke
  0.5 0 dtransform exch truncate exch idtransform pop setlinewidth
 newpath 56.69281 0 moveto
-56.69284 -102.04706 lineto stroke
+56.69281 -102.04706 lineto stroke
  0 0.5 dtransform truncate idtransform setlinewidth pop
-newpath 37.79523 -85.03922 moveto
-56.69284 -102.04706 lineto stroke
+newpath 113.38562 -85.03922 moveto
+56.69281 -102.04706 lineto stroke
 newpath 198.42484 0 moveto
-113.38565 -136.06274 lineto stroke
-newpath 56.69284 -119.0549 moveto
-113.38565 -136.06274 lineto stroke
-newpath 56.69284 -119.0549 moveto
-283.46408 -136.06274 lineto stroke
+113.38562 -136.06274 lineto stroke
+newpath 56.69281 -119.0549 moveto
+113.38562 -136.06274 lineto stroke
+newpath 56.69281 -119.0549 moveto
+283.46405 -136.06274 lineto stroke
 newpath 311.81046 0 moveto
-283.46408 -136.06274 lineto stroke
-newpath 113.38565 -153.07059 moveto
-155.90526 -170.07843 lineto stroke
+283.46405 -136.06274 lineto stroke
+newpath 113.38562 -153.07059 moveto
+155.90523 -170.07843 lineto stroke
 newpath 255.11765 0 moveto
-155.90526 -170.07843 lineto stroke
-newpath 113.38565 -153.07059 moveto
-240.94447 -170.07843 lineto stroke
-newpath 283.46408 -153.07059 moveto
-240.94447 -170.07843 lineto stroke
-newpath 155.90526 -187.08627 moveto
-198.42487 -204.09412 lineto stroke
-newpath 240.94447 -187.08627 moveto
-198.42487 -204.09412 lineto stroke
--15.98405 6.01328 moveto
+155.90523 -170.07843 lineto stroke
+newpath 113.38562 -153.07059 moveto
+240.94444 -170.07843 lineto stroke
+newpath 283.46405 -153.07059 moveto
+240.94444 -170.07843 lineto stroke
+newpath 155.90523 -187.08627 moveto
+198.42484 -204.09412 lineto stroke
+newpath 240.94444 -187.08627 moveto
+198.42484 -204.09412 lineto stroke
+38.23181 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
--4.36096 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-5.76074 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-11.00275 6.01328 moveto
-(g) cmsy10 9.96265 fshow
-41.02005 6.01328 moveto
-(f:) cmsy10 9.96265 fshow
-52.64314 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-57.88515 6.01328 moveto
+49.8549 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+57.91151 6.01328 moveto
 (;) cmmi10 9.96265 fshow
-62.31294 6.01328 moveto
-(z) cmmi10 9.96265 fshow
-67.38416 6.01328 moveto
+62.33931 6.01328 moveto
+(C) cmmi10 9.96265 fshow
+70.17241 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-124.31932 6.01328 moveto
+120.64203 6.01328 moveto
 (f) cmsy10 9.96265 fshow
-129.30061 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-139.42242 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-144.66432 6.01328 moveto
+125.62332 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+137.52313 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+145.57973 6.01328 moveto
 (;) cmmi10 9.96265 fshow
-149.09212 6.01328 moveto
-(z) cmmi10 9.96265 fshow
-154.16342 6.01328 moveto
+150.00752 6.01328 moveto
+(C) cmmi10 9.96265 fshow
+157.84073 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-182.52608 6.01328 moveto
+180.25613 6.01328 moveto
 (f) cmsy10 9.96265 fshow
-187.50737 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-197.62918 6.01328 moveto
+185.23743 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+197.13724 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-204.27087 6.01328 moveto
-(z) cmmi10 9.96265 fshow
-209.34218 6.01328 moveto
+203.77904 6.01328 moveto
+(C) cmmi10 9.96265 fshow
+211.61214 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-239.13359 6.01328 moveto
+236.83723 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
-250.75668 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-260.87839 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-266.12039 6.01328 moveto
+248.46033 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+260.36014 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+268.41673 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-284.43506 6.01328 moveto
+280.7578 6.01328 moveto
 (f:) cmsy10 9.96265 fshow
-296.05815 6.01328 moveto
-(x;) cmmi10 9.96265 fshow
-306.17986 6.01328 moveto
+292.38089 6.01328 moveto
+(A;) cmmi10 9.96265 fshow
+304.2807 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-312.82166 6.01328 moveto
-(y) cmmi10 9.96265 fshow
-318.06366 6.01328 moveto
+310.9225 6.01328 moveto
+(B) cmmi10 9.96265 fshow
+318.9791 6.01328 moveto
 (;) cmmi10 9.96265 fshow
-322.49146 6.01328 moveto
+323.40689 6.01328 moveto
 (:) cmsy10 9.96265 fshow
-329.13326 6.01328 moveto
-(z) cmmi10 9.96265 fshow
-334.20445 6.01328 moveto
+330.04869 6.01328 moveto
+(C) cmmi10 9.96265 fshow
+337.88179 6.01328 moveto
 (g) cmsy10 9.96265 fshow
-2.99886 -45.01025 moveto
+66.87051 -45.01025 moveto
 (f:) cmsy10 9.96265 fshow
-14.62195 -45.01025 moveto
-(x;) cmmi10 9.96265 fshow
-24.74365 -45.01025 moveto
-(z) cmmi10 9.96265 fshow
-29.81496 -45.01025 moveto
+78.4936 -45.01025 moveto
+(A;) cmmi10 9.96265 fshow
+90.39342 -45.01025 moveto
+(C) cmmi10 9.96265 fshow
+98.22652 -45.01025 moveto
 (g) cmsy10 9.96265 fshow
-25.44337 -79.02594 moveto
+98.24551 -79.02594 moveto
 (f) cmsy10 9.96265 fshow
-30.42467 -79.02594 moveto
-(y) cmmi10 9.96265 fshow
-35.66667 -79.02594 moveto
+103.2268 -79.02594 moveto
+(B) cmmi10 9.96265 fshow
+111.28342 -79.02594 moveto
 (;) cmmi10 9.96265 fshow
-40.09447 -79.02594 moveto
-(z) cmmi10 9.96265 fshow
-45.16577 -79.02594 moveto
+115.71121 -79.02594 moveto
+(C) cmmi10 9.96265 fshow
+123.54442 -79.02594 moveto
 (g) cmsy10 9.96265 fshow
-49.17584 -113.04163 moveto
+47.7949 -113.04163 moveto
 (f) cmsy10 9.96265 fshow
-54.15714 -113.04163 moveto
-(z) cmmi10 9.96265 fshow
-59.22844 -113.04163 moveto
+52.7762 -113.04163 moveto
+(C) cmmi10 9.96265 fshow
+60.60931 -113.04163 moveto
 (g) cmsy10 9.96265 fshow
-105.55734 -147.05731 moveto
+104.66827 -147.05731 moveto
 (f) cmsy10 9.96265 fshow
-110.53864 -147.05731 moveto
-(x) cmmi10 9.96265 fshow
-116.23264 -147.05731 moveto
+109.64957 -147.05731 moveto
+(A) cmmi10 9.96265 fshow
+117.12157 -147.05731 moveto
 (g) cmsy10 9.96265 fshow
-264.15913 -147.05731 moveto
+261.86275 -147.05731 moveto
 (f:) cmsy10 9.96265 fshow
-275.78223 -147.05731 moveto
-(x;) cmmi10 9.96265 fshow
-285.90393 -147.05731 moveto
+273.48584 -147.05731 moveto
+(A;) cmmi10 9.96265 fshow
+285.38565 -147.05731 moveto
 (:) cmsy10 9.96265 fshow
-292.54573 -147.05731 moveto
-(y) cmmi10 9.96265 fshow
-297.78773 -147.05731 moveto
+292.02745 -147.05731 moveto
+(B) cmmi10 9.96265 fshow
+300.08405 -147.05731 moveto
 (g) cmsy10 9.96265 fshow
-148.30295 -181.073 moveto
+146.89557 -181.073 moveto
 (f) cmsy10 9.96265 fshow
-153.28424 -181.073 moveto
-(y) cmmi10 9.96265 fshow
-158.52625 -181.073 moveto
+151.87686 -181.073 moveto
+(B) cmmi10 9.96265 fshow
+159.93347 -181.073 moveto
 (g) cmsy10 9.96265 fshow
-230.02127 -181.073 moveto
+228.61394 -181.073 moveto
 (f:) cmsy10 9.96265 fshow
-241.64436 -181.073 moveto
-(y) cmmi10 9.96265 fshow
-246.88637 -181.073 moveto
+240.23703 -181.073 moveto
+(B) cmmi10 9.96265 fshow
+248.29364 -181.073 moveto
 (g) cmsy10 9.96265 fshow
-194.70271 -214.81194 moveto
+194.70268 -214.81194 moveto
 (2) lasy10 9.96265 fshow
 showpage
 %%EOF
