* skript.latex:   + meine Lösungen für die Aufgaben am Dienstag
git-svn-id: https://svn.lug-jena.de/uni-skripte@335 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -2598,8 +2598,12 @@ Was bedeuten die Formeln und den angegebenene Interpretationen?
   ist die Gleichheit "`$=$"' und $f_{1}^{2}$ die Multiplikation
   ($u,v,x,y,z$ sind Variablensymbole)
 
+  $x$ ist Teiler von $y$ und $z$
+
  \item $\forall y( (\exists z A_{1}^{2}(f_{1}^{2}(y,z),x)) \rightarrow
   (A_{1}^{2}(y,a) \wedge A_{1}^{2}(y,x)))$, wie oben $a=1$
+
+  Jede natürliche Zahl hat 1 und sich selbst als Teiler.
 \end{enumerate}
 
 \subsection*{Aufgabe 2}
@@ -2607,7 +2611,19 @@ Geben Sie eine Formel mit Interpretation mit der Grundmenge $\N$ an, die
 folgende Bedeutung hat.
 \begin{enumerate}
  \item $x=ggT(y,z)$
+
+  \begin{gather*}
+    T(x, a) \wedge T(x,b) \wedge (\forall y: T(y,a) \wedge T(y, b) \wedge
+       y\leq x)
+  \end{gather*}
+  mit $T(\alpha,\beta)$ als "`$\alpha$ teilt $\beta$"'.
+
  \item Es gibt unendlich viele Primzahlen.
+
+  \begin{gather*}
+    \neg \big( \exists u: P(u) \wedge (\forall x: P(x) \wedge x < u) \big)
+  \end{gather*}
+  mit $P(\alpha)$ als "`$\alpha$ ist prim"'.
 \end{enumerate}
 
 \clearpage
